--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "axios": "^0.21.1",
     "bootstrap": "5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
